Fixes header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ header {
 }
 .social {
   width: 90%;
-  margin: 15px auto;
+  margin: 0 25px;
   font-size: 12px;
 }
 .social .social-link {
@@ -500,7 +500,7 @@ h5 {
   text-align: center;
   position: relative;
   margin: 0;
-  padding: 0;
+  padding: 10px 10px 0 10px;
   border: 0;
 }
 .main-nav ul li.newsletter-signup .email {
@@ -540,9 +540,9 @@ h5 {
 }
 .main-nav ul li.newsletter-signup .submit-btn {
   position: absolute;
-  right: 0;
-  top: -1px;
-  height: 41px;
+  right: 10px;
+  top: 10px;
+  height: 40px;
   width: 40px;
   border: none;
   background-color: #ffffff;
