--- a/less/header.less
+++ b/less/header.less
@@ -15,7 +15,7 @@ header {
 
 .social {
 	width: 90%;
-	margin: 15px auto;
+	margin: 0 25px;
 	font-size: 12px;
 	
 	.social-link {
