--- a/less/newsletter.less
+++ b/less/newsletter.less
@@ -13,7 +13,7 @@
 				text-align: center;
 				position: relative;
 				margin: 0;
-				padding: 0;
+				padding: 10px 10px 0 10px;
 				border: 0;
 
 				.email {
@@ -51,9 +51,9 @@
 
 				.submit-btn {
 					position: absolute;
-					right: 0;
-					top: -1px;
-					height: 41px;
+					right: 10px;
+					top: 10px;
+					height: 40px;
 					width: 40px;
 					border: none;
 					background-color: @white;
